woost/views/resources/styles/backoffice.css
/* ... */
.BackOfficeShowDetailView .PropertyTable .resource_thumbnail a.thumbnail_link .thumbnail {
    display: block;
    margin: auto;
    margin-bottom: 0.4em;
}

.BackOfficeShowDetailView .PropertyTable .resource_thumbnail a.thumbnail_link .label {
    text-decoration: underline;
}

.BackOfficeShowDetailView .PropertyTable .resource_thumbnail a.open_resource_link {
    color: rgb(70,70,70);
    font-size: 90%;
    background-repeat: no-repeat;
    background-image: url(../images/open_resource.png);
    background-position: left center;
    padding-left: 0.7em;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}

/* Edit form
-----------------------------------------------------------------------------*/
.BackOfficeItemView .toolbar .action_button.selected {
    font-weight: bold;
    color: rgb(50,50,50);
}

.BackOfficeItemView .toolbar .preview_action,
.BackOfficeItemView .toolbar .save_action,
.BackOfficeItemView .toolbar .save_draft_action,
.BackOfficeItemView .toolbar .confirm_draft_action,
.BackOfficeItemView .toolbar .close_action,
.BackOfficeItemView .toolbar .cancel_action {
    float: right;
}

.BackOfficeItemView .navigation .section_entry {
    z-index: 1;
    margin-left: 0;
    margin-right: 0.2em;
}

.BackOfficeItemView .messages {
    margin-bottom: 0.3em;
}

.BackOfficeItemView .edit_form_frame {
    border: 1px solid rgb(200,210,220);
    border-top: none;
    z-index: 0;
    clear: both;
    position: absolute;    
    top: 2.5em;
    bottom: 4em;
    left: 0;
    right: 0;
    overflow: auto;
}

.BackOfficeItemView .edit_form {
    padding: 0;
}

.BackOfficeItemView .draft_box {
    clear: both;
    padding: 0.5em;
    border: 1px solid rgb(235,227,175);
    font-size: 85%;
}

.BackOfficeItemView .draft_box strong {
    color: rgb(75,50,25);
}

.BackOfficeItemView .draft_box .draft_actions {
    text-align: right;
}

.BackOfficeItemView .draft_box .draft_actions button {
    margin-left: 0.3em;
}

.BackOfficeEditView .success {
    margin-bottom: 1em;
}

.BackOfficeEditView .edit_form .fields {
    clear: both;
}

.BackOfficeItemView .edit_form_toolbar {
    border-bottom: 1px solid rgb(230,235,240);
    height: 2em;
    padding-top: 0.3em;
    padding-right: 0.3em;
}

.BackOfficeItemView .translations_selector {
    font-size: 85%;
    float: right;
}

.BackOfficeItemView .translations_selector .label {
    height: 1.9em;
    padding-top: 0.4em;
    padding-left: 0.5em !important;
    background-position: right 0.8em;
    display: block;
}

.BackOfficeEditView .translations_selector .selector_content,
.BackOfficePreviewView .translations_selector .selector_content {
    list-style-type: none;
    padding-right: 0.1;
    right: 0;
	top:2.4em;
}

.BackOfficePreviewView .translations_selector .selector_content {
	min-width: inherit;
    padding-left: .9em !important;
}

.BackOfficeEditView .translations_selector .selector_content li,
.BackOfficePreviewView .translations_selector .selector_content li {
    clear: both;
    margin: 0;
    padding: 0;
}

.BackOfficeEditView .translations_selector .language,
.BackOfficePreviewView .translations_selector .language {
    float: left;
    height: 2em;
}

.BackOfficeEditView .translations_selector button {
    float: right;
    margin: 0;
    padding: 0;
    cursor: pointer;
    border: none;
    background: none;
}

body.scripted .BackOfficeEditView .translations_selector .selector_content,
body.scripted .BackOfficePreviewView .translations_selector .selector_content {
    list-style-type: none;
    padding-right: 0.1;
}

body.scripted .BackOfficeEditView .translations_selector .selector_content li,
body.scripted .BackOfficePreviewView .translations_selector .selector_content li{
    clear: both;
    margin: 0;
    padding: 0;
}

body.scripted .BackOfficeEditView .translations_selector .selector_content li input {
    float: left;
}

.BackOfficeLayout .ItemSelector {
    padding: 0.1em;
}

.BackOfficeLayout .ItemSelector .selection_label,
.BackOfficeLayout .ItemSelector-buttons {
    display: inline-block;
}

.BackOfficeLayout .ItemSelector .selection_label {
    margin-top: 0.05em;
    margin-right: 1.4em;
}

.BackOfficeLayout .ItemSelector .selection_label:empty {
    margin-right: 0;
}

.BackOfficeFieldsView .ItemSelector-button {
    margin-right: 0.6em;
}

.BackOfficeFieldsView button.ItemSelector-button,
.BackOfficeFieldsView .ItemSelector .new .label {
    font-size: 90%;
}

.BackOfficeFieldsView .ItemSelector-button .icon {
    vertical-align: middle;
    margin-right: 0.3em;
}

.BackOfficeFieldsView .ItemSelector .new {
    margin-left: -0.4em;
}

.BackOfficeFieldsView .ItemSelector .new .label {
    color: rgb(50,80,110);
    padding-left: 0.4em;
    padding-top: 0.2em;
}

.BackOfficeFieldsView .ItemSelector .new .selector_content {
    top: 1.2em;
}

.BackOfficeFieldsView .ItemSelector .new .selector_content .entry_label {
    border: none;
    background: none;
    font-size: 95%;
    cursor: pointer;
}

.BackOfficeLayout .filters .ItemSelector .selection_label {
    margin-top: 0.3em;
}

.BackOfficeLayout .filters .ItemSelector .select .icon {
    display: none;
}

.BackOfficeFieldsView .ItemSelector button,
button.TypeSelectorButton {
    text-align: left;
}

.BackOfficeLayout .ItemSelector .selection_label {
    background-repeat: no-repeat;
    color: rgb(75,75,75);
}

.BackOfficeLayout .ItemSelector .empty_selection,
button.TypeSelectorButton span {
    padding-left: 0;
    font-style: italic;
}

.BackOfficeItemView .buttons .additional_actions_selector .selector_content button {
    display: block;
    padding: 0;
    margin: 0;
    text-align: left;
    border: none;
    background-color: rgb(250, 250, 250);
}

.BackOfficeItemView .additional_actions_selector .selector_content button + button {
    margin-top: 0.3em;
}

.BackOfficeItemView .edit_form_frame,
.BackOfficeEditView .edit_form {
    padding: 1em;
}

.BackOfficeEditView .edit_form_frame {
    padding: 0;
}
/* ... */

